# Real-Time-Image-Filtering

./: .gitignore  CMakeLists.txt  readme.md
Task1/: CMakeLists.txt  imgDisplay.cpp
include/: filter.h
src/: filter.cpp  vidDisplay.cpp
